our java in animals

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </main>
 
 
-<p>Click the button to display a surprize .</p>
+<p>Click the button to get advice .</p>
 
 <button onclick="myFunction()">Try it</button>
 
