--- a/index.html
+++ b/index.html
@@ -5,28 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animals Fact</title>
   
-</head>
-<style>
-  
-  body  {
-  background-image: url("paper.gif");
-  background-color: #cccccc;
-}
 
-<body>
-  div {}
-  
-  h1 {text-align: center;}
-  p {text-align: center;}
-  div {text-align: center;}
-  body {
-  background-color: ;
 
-  color: blue;
-}
-}
-</style>
+<link rel="stylesheet" href="css/style.css">  
+
 </head>
+
 <body>
 
 <body>
@@ -37,8 +21,12 @@
       
       <li>
         <a href="index.html">Home</a>
-        <a href="">Our Services</a>
+      </li>
+      <li>
         <a href="">Contact Us</a>
+      </li>
+      <li>
+        <a href="">Our Services</a>
       </li>
     </ul>
   </nav>
