--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <header>
-  <h1>Animals </h1>
+  <h1 id="top">Animals </h1>
   <nav>
     <ul>
       
@@ -38,12 +38,12 @@
 
 <main>
   <img src="cat.jpg" alt="" width="1024" height="700">
- <p>Cats are believed to be the only mammals who don't taste sweetness. Cats are nearsighted, but their peripheral vision and night vision are much better than that of humans. Cats are supposed to have 18 toes (five toes on each front paw; four toes on each back paw). Cats can jump up to six times their length.</p>
+ <p class="para">Cats are believed to be the only mammals who don't taste sweetness. Cats are nearsighted, but their peripheral vision and night vision are much better than that of humans. Cats are supposed to have 18 toes (five toes on each front paw; four toes on each back paw). Cats can jump up to six times their length.</p>
  <img src="https://www.lovethegarden.com/sites/default/files/styles/header_image_xl/public/content/articles/UK_community-fun-facts-19-common-british-birds-you-can-find-your-garden_header.jpg?itok=MweJ55ij" alt="" width="1024" height=" 600">
- <p> Birds are warm-blooded, covered in feathers and lay eggs. All birds have wings, a beak and stand on two legs. Most birds fly, but some cannot. Some species, particularly penguins and members of the Anatidae family, are adapted to swim.
+ <p class="para"> Birds are warm-blooded, covered in feathers and lay eggs. All birds have wings, a beak and stand on two legs. Most birds fly, but some cannot. Some species, particularly penguins and members of the Anatidae family, are adapted to swim.
 </p>
 <img src="https://img2.goodfon.com/wallpaper/nbig/5/76/fish-nice-orange-beauty.jpg" alt="" width="1024" height="600">
-<p>A fish is an animal which lives and breathes in water. All fish are vertebrates (have a backbone) and most breathe through gills and have fins and scales. Fish make up about half of all known vertebrate species</p>
+<p class="para">A fish is an animal which lives and breathes in water. All fish are vertebrates (have a backbone) and most breathe through gills and have fins and scales. Fish make up about half of all known vertebrate species</p>
 <p>                         
 
 
@@ -55,13 +55,13 @@
 </main>
 
 
-<p>Click the button to get advice .</p>
+<p class="para">Click the button to get advice .</p>
 
-<button onclick="myFunction()">Try it</button>
+<button id="but" onclick="myFunction()">Try it</button>
 
 <p id="demo"></p>
 
-<script>
+<script id="but2">
 function myFunction() {
   var txt;
   var r = confirm(" 'Ok' for lover and 'cancel' for heater");
@@ -85,6 +85,6 @@ function myFunction() {
 </body>
 
 <footer>
-  <p> Copyright for Laith Hayajneh</p>
+  <p id="foot"> Copyright for Laith Hayajneh</p>
 </footer>
 </html>
